changed default theme, added cat running, and other fixes

--- a/themes/hugoplate/layouts/_default/baseof.html
+++ b/themes/hugoplate/layouts/_default/baseof.html
@@ -16,6 +16,7 @@
   </head>
 
   <body>
+    <script src="{{ "oneko.js" | absURL }}"></script>
     <!-- cache partial only in production -->
     {{ if hugo.IsProduction }}
       {{ partialCached "preloader.html" . }}
