home page design

--- a/themes/hugoplate/layouts/contact/list.html
+++ b/themes/hugoplate/layouts/contact/list.html
@@ -1,7 +1,9 @@
 {{ define "main" }}
   {{ partial "page-header" . }}
 
-
+  <html>
+    
+</html>
   <section class="section-sm">
     <div class="container">
       <div class="row">
