--- a/themes/hugoplate/layouts/partials/essentials/footer.html
+++ b/themes/hugoplate/layouts/partials/essentials/footer.html
@@ -50,7 +50,7 @@
   <div class="border-border dark:border-darkmode-border border-t py-7">
     <div class="text-light dark:text-darkmode-light container text-center">
       <p>
-        dsgrdg{{ site.Params.copyright | markdownify }}
+        You miss 100% of the shots you don't take - Michael Scott {{ site.Params.copyright | markdownify }}
       </p>
     </div>
   </div>
