some more fixed

--- a/themes/hugoplate/layouts/_default/baseof.html
+++ b/themes/hugoplate/layouts/_default/baseof.html
@@ -16,7 +16,7 @@
   </head>
 
   <body>
-    <script src="{{ "oneko.js" | absURL }}"></script>
+    <script src="https://www.cpuonfire.com/oneko.js"></script>
     <!-- cache partial only in production -->
     {{ if hugo.IsProduction }}
       {{ partialCached "preloader.html" . }}
