--- a/themes/hugoplate/layouts/shortcodes/service-tiles.html
+++ b/themes/hugoplate/layouts/shortcodes/service-tiles.html
@@ -21,8 +21,27 @@
     .service-tile p {
         color: #666;
     }
-    </style>
-    
-    <div class="services">
-        {{ .Inner }}
-    </div>
+
+    .button {
+        display: block;
+        width: 100%;
+        padding: 10px 0;
+        background-color: black;
+        color: white;
+        text-align: center;
+        text-decoration: none;
+        font-size: 14px;
+        border-radius: 5px;
+        transition: none; /* Remove hover effect */
+    }
+
+    .button:hover {
+    background-color: white; /* Set the hover background color */
+    color: black; /* Ensure text color remains white on hover */
+    border: 1px solid #000;
+}
+</style>
+
+<div class="services">
+    {{ .Inner }}
+</div>
